# gait-research-platform

./: .env.example  .gcloudignore  .gitignore  AGENT.md  Dockerfile.agent  Dockerfile.api  Dockerfile.worker  README.md  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: ci.yml  deploy-azure.yml
db/: schema.sql
docs/: agent_architecture.md  chat_orchestration.md  cloud_run_dev_deployment_contract.md  deployment_azure.md  deployment_gcp.md  dev_data_contract.md  engineering_principles.md  formula_infrastructure.md  frontend_design_spec.md  frontend_view_library.md  github_research_workflow.md  local_cloudrun_dev_workflow.md  local_run_commands.md  medical_symbolic_regression_principles.md  migration_from_mvp.md  module_layout.md  platform_architecture.md  pysr_architecture.md  pysr_manifest_schema_principles.md  research_console_contract.md  run_model.md  runtime_validation.md  symbolic_regression_concepts.md  worker_local_mode_contract.md
experiments/: gait_pain_discovery_v1.yaml
frontend/research_console/: .env.local  README.md  components.json  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
gait_research_platform/: __init__.py
gait_research_platform/agents/: agent_loop.py  experiment_agent.py  experiment_planner.py  llm_client.py
gait_research_platform/analysis/: clustering_analysis.py  embedding_visualization.py  periodicity_analysis.py
gait_research_platform/core/: __init__.py  config_loader.py  data_manager.py  interfaces.py  registry.py
gait_research_platform/data/: __init__.py  sample_pose_dataset.py
gait_research_platform/experiments/: anomaly_detection.py  contrastive_training.py  (+1 more)
hound_forward/: __init__.py  bootstrap.py  settings.py
research_tools/: __init__.py
scripts/: generate_sample_data.py
(+175 files in other folders)
