[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gait-research-platform"
version = "0.1.0"
description = "AI-driven gait research platform MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "azure-identity>=1.25",
  "azure-servicebus>=7.14",
  "azure-storage-blob>=12.27",
  "fastapi>=0.135",
  "langgraph>=1.0",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "omegaconf>=2.3",
  "pandas>=2.2",
  "pydantic-settings>=2.13",
  "python-multipart>=0.0.20",
  "pyarrow>=15.0",
  "psycopg[binary]>=3.3",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "seaborn>=0.13",
  "sqlalchemy>=2.0",
  "torch>=2.2",
  "uvicorn>=0.41",
]

[project.optional-dependencies]
agent = ["openai>=1.30"]
dev = ["httpx>=0.28", "pytest>=8.0"]
umap = ["umap-learn>=0.5.5"]
video = ["decord>=0.6.0", "opencv-python>=4.9"]

[tool.setuptools.packages.find]
include = ["hound_forward*"]

[tool.pytest.ini_options]
pythonpath = ["."]
